# FaceRecoginitionService

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
arcface-bias-analysis/: README.md  main.py  requirements.txt
client/: package-lock.json
face-recognition-test/: README.md  main.py  requirements.txt
pyserver/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
pyserver/migrations/: users.sql
pyserver/src/migrations/: migrate.py
pyserver/src/migrations/sqls/: create_tenants.down.sql  create_tenants.up.sql  create_users.down.sql  create_users.up.sql
pyserver/src/source/: pg.py
pyserver/static/: main.js  style.css
pyserver/templates/: cabinet.html  index.html  login.html  register.html
pyserver/test/unit/: example.test.py
service/: Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  jest.config.js  nodemon.json  package-lock.json  package.json
service/resources/presto/: passwords.properties
service/src/: adjustPgTypes.js  constants.js  errors.js  faker.js  hash.js  headers.js  index.js  router.js  routes.js  time.js
service/src/analytics/: AnalyticsTables.js  getByHash.js  index.html  index.js  sendLoginEvent.js  writeDevicesDimension.js  writeLocationsDimension.js  writeLoginFact.js  writeSessionsDimension.js  writeTimeDimension.js
service/src/schemas/: index.js  sign-in.js  sign-up.js
service/src/sql/: frodo.sql  init.js  migration-run.js  olap.sql  oltp.sql
service/src/tests/: dbUtils.js
service/src/user/: index.js  user.controller.js  user.errors.js  (+2 more)
(+14 files in other folders)
