[project]
name = "pyserver"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.11.0)",
    "asyncpg (==0.30.0)",
    "certifi (==2025.8.3)",
    "click (==8.3.0)",
    "colorama (==0.4.6)",
    "fastapi (==0.118.0)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httptools (==0.6.4)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "jinja2 (==3.1.6)",
    "markupsafe (==3.0.3)",
    "pydantic (==2.11.9)",
    "pydantic-core (==2.33.2)",
    "python-dotenv (==1.1.1)",
    "python-multipart (==0.0.20)",
    "pyyaml (==6.0.3)",
    "sniffio (==1.3.1)",
    "starlette (==0.48.0)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "uvicorn (==0.37.0)",
    "websockets (==15.0.1)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "opencv-python-headless (>=4.9)",
    "deepface",
    "tf-keras"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "watchfiles (>=1.1.0,<2.0.0)"
]
